enhance topic api performace